--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ description =
   description ||
   'こちらのサイトでリドールの情報や活動を紹介していきます。'
 const baseURL = 'https://rizdor.github.io/official/';
-og_image = og_image || baseURL + 'public/logo.png'
+og_image = og_image || baseURL + '/logo.png'
 ---
 
 <!doctype html>
