--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ description =
   description ||
   'こちらのサイトでリドールの情報や活動を紹介していきます。'
 const baseURL = 'https://rizdor.github.io/official/';
-og_image = og_image || baseURL + '/public/logo.png'
+og_image = og_image || '/official/logo.png'
 ---
 
 <!doctype html>
@@ -39,7 +39,7 @@ og_image = og_image || baseURL + '/public/logo.png'
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&family=Zen+Kaku+Gothic+New:wght@300;400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="icon" sizes="64x64" type="image/png" href="/public/fav.ico" />
+    <link rel="icon" sizes="64x64" type="image/png" href="/official/fav.ico" />
     <link rel="shortcut icon" href="" />
     <GoogleAnalytics id="G-STZ429M9E0" />
   </head>
