--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ title =
   title || '早稲田大学公認音楽サークル アンサンブル・リドール'
 description =
   description ||
-  'こちらのサイトでリドールの情報や活動を紹介していきます。'
+  '早稲田大学公認音楽サークル「アンサンブル リドール」オフィシャルウェブサイト。ポップスからジャズ、ラテンやオーケストラまで幅広いジャンルで活動。'
 const baseURL = 'https://rizdor.github.io/official/';
 og_image = '/official/logo.png'
 ---
