--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,10 @@
 import Layout from "@/layouts/Layout.astro";
 import { Image } from "astro:assets";
 import logo from "./images/logo.png";
-const title = "早稲田大学アンサンブル・リドール";
+const title = "早稲田大学公認音楽サークル アンサンブル・リドール";
 const description =
   "早稲田大学公認音楽サークル「アンサンブル リドール」オフィシャルウェブサイト。ポップスからジャズ、ラテンやオーケストラまで幅広いジャンルで活動。";
-const og_image = { logo };
+const og_image = "logo.png";
 import biglogo4 from "./images/biglogo4.png";
 import Carousel from "@/components/Carousel.astro";
 import NewsData from "@/components/NewsData.astro";
