--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,6 +94,9 @@ console.log(invitation);
             <p class="p-middle__About_letter_o">o</p>
             <p class="p-middle__About_letter_u">u</p>
             <p class="p-middle__About_letter_t">t</p>
+            <p class="p-middle__About_letter_u"> </p>
+            <p class="p-middle__About_letter_t">u</p>
+            <p class="p-middle__About_letter_t">s</p>
           </div>
           <div class="p-middle__About_points">
             <div class="p-middle__About_lump">
@@ -105,20 +108,21 @@ console.log(invitation);
             </div>
             <p class="p-middle__About_explanation">
               メンバー全員が演奏会に参加するという形をとっています。そのため、楽器を始めたての初心者でも、
-              経験者と同様にコンサートの舞台で演奏することができます。
+              経験者と同様に、はじめからコンサートの舞台で演奏することができます。また、入会の際にオーディションなどはありません。
             </p>
           </div>
           <div class="p-middle__About_points">
             <div class="p-middle__About_lump">
               <div class="p-middle__About_header">
                 <p class="p-middle__About_number">02</p>
-                <p class="p-middle__About_title">初心者大歓迎</p>
+                <p class="p-middle__About_title">初心者・経験者大歓迎</p>
               </div>
-              <p class="p-middle__About_title_responsive">初心者大歓迎</p>
+              <p class="p-middle__About_title_responsive">初心者・経験者大歓迎</p>
             </div>
             <p class="p-middle__About_explanation">
               リドールでは、初心者も多数受け付けており、現在メンバーの約3割が初心者です。中には大学までほとんど音楽をしたことのなかったメンバーや、
-              大学に入ってから別の楽器を始めてみたというメンバーもいます。リドールではこうした初心者も上級生がサポートしていきます。
+              大学に入ってから別の楽器を始めてみたというメンバーもいます。リドールではこうした初心者も上級生がサポートしていきます。また、経験者でも
+              ブランクがある方や、大学では音楽を緩く続けたい方にもオススメ！純粋に音楽を楽しむことを大切にしているので、練習も自分のペースで続けられます。
             </p>
           </div>
           <div class="p-middle__About_points">
@@ -130,7 +134,7 @@ console.log(invitation);
               <p class="p-middle__About_title_responsive">インカレ生多数</p>
             </div>
             <p class="p-middle__About_explanation">
-              インカレサークルのため、他大学の学生さんも大歓迎です。現在、慶應義塾大、日本女子大、東京女子大、東京藝大、大妻女子大、立教大のメンバーが参加しています。
+              インカレサークルのため、他大学の学生さんも大歓迎です。現在、慶應義塾大、日本女子大、東京女子大、東京藝大、大妻女子大、立教大などをはじめとした多くの大学出身のメンバーが参加しています。
             </p>
           </div>
           <div class="p-middle__About_detail">
