--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,6 +99,18 @@ console.log(invitation);
             <div class="p-middle__About_lump">
               <div class="p-middle__About_header">
                 <p class="p-middle__About_number">01</p>
+                <p class="p-middle__About_title">早稲田唯一の編成</p>
+              </div>
+              <p class="p-middle__About_title_responsive">早稲田唯一の編成</p>
+            </div>
+            <p class="p-middle__About_explanation">
+              ビックバンドにVn, Cl, Flの弱音パートを迎えたポップスオーケストラという早稲田唯一の編成で活動しています！特殊な編成であるため、楽譜は自分たちで編曲して作成しています。
+            </p>
+          </div>
+          <div class="p-middle__About_points">
+            <div class="p-middle__About_lump">
+              <div class="p-middle__About_header">
+                <p class="p-middle__About_number">02</p>
                 <p class="p-middle__About_title">非レギュラー制</p>
               </div>
               <p class="p-middle__About_title_responsive">非レギュラー制</p>
@@ -111,7 +123,7 @@ console.log(invitation);
           <div class="p-middle__About_points">
             <div class="p-middle__About_lump">
               <div class="p-middle__About_header">
-                <p class="p-middle__About_number">02</p>
+                <p class="p-middle__About_number">03</p>
                 <p class="p-middle__About_title">初心者・経験者大歓迎</p>
               </div>
               <p class="p-middle__About_title_responsive">初心者・経験者大歓迎</p>
@@ -125,7 +137,7 @@ console.log(invitation);
           <div class="p-middle__About_points">
             <div class="p-middle__About_lump">
               <div class="p-middle__About_header">
-                <p class="p-middle__About_number">03</p>
+                <p class="p-middle__About_number">04</p>
                 <p class="p-middle__About_title">インカレ生多数</p>
               </div>
               <p class="p-middle__About_title_responsive">インカレ生多数</p>
