--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -180,6 +180,12 @@ console.log(invitation);
                       {invitation.money}
                     </p>
                   </div>
+                  <div class="p-middle__About_details1">
+                    <p class="p-middle__About_details1_title">楽器構成</p>
+                    <p class="p-middle__About_details_composition">
+                      {invitation.composition}
+                    </p>
+                  </div>
                 </div>
               ))
             }
