--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -182,9 +182,7 @@ console.log(invitation);
                   </div>
                   <div class="p-middle__About_details1">
                     <p class="p-middle__About_details1_title">楽器構成</p>
-                    <p class="p-middle__About_details_composition">
-                      {invitation.composition}
-                    </p>
+                    <p>{invitation.composition}</p>
                   </div>
                 </div>
               ))
