ハンバーガーのUI調整

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -71,22 +71,23 @@ import Form from "@/components/Form.astro";
             <a href="/official/concert" class="header__navigation-link">CONCERT</a
             >
           </li>
-          <ul style="display: flex; justify-content: space-between;">
+          <!-- <ul style="display: flex; justify-content: space-between;"> -->
             <li class="header__navigation-link">SNS</li>
-            <li>
+            <ul style="margin-left:50px;">
+            <li class="snslist">
               <a
                 href="https://twitter.com/ens_rizdor"
                 class="header__navigation-link"
                 style="font-size: 5vw;text-decoration: underline;">X</a
               >
             </li>
-            <li>
+            <li class="snslist">
               <a
                 href="https://www.instagram.com/ens_rizdor"
                 class="header__navigation-link" style="font-size: 5vw;text-decoration: underline;">Instagram</a
               >
             </li>
-            <li>
+            <li class="snslist">
               <a
                 href="https://www.youtube.com/@rizdor"
                 class="header__navigation-link"
