--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,6 +21,9 @@ import Form from "@/components/Form.astro";
   </div>
     <ul class="header__navbar-content">
       <li class="header__navbar-item">
+      <li class="header__navbar-item">
+        <a href="/official/member" class="header__navbar-link">Member</a>
+      </li>
         <a href="/official/blogpage" class="header__navbar-link">Blog</a>
       </li>
       <li class="header__navbar-item">
