--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -20,7 +20,7 @@ import Form from "@/components/Form.astro";
     <Form />
   </div>
     <ul class="header__navbar-content">
-      <!-- <ul style="display: flex; justify-content: space-between;"> -->
+    <ul style="display: flex; justify-content: space-between;">
       <li class="header__navbar-item">
       <li class="header__navbar-item">
         <a href="/official/member" class="header__navbar-link">Member</a>
