newsのリンクを一度切ってます

--- a/src/components/NewsData.astro
+++ b/src/components/NewsData.astro
@@ -24,7 +24,7 @@ const response2 = await getNews({
         response2.contents.map((news: any) => (
         <div class="NewsData__box">
          <div class="NewsData__News-box">
-            <a href="put the link for the newsdata"></a>
+            {/* <a href="put the link for the newsdata"></a> */}
             <p class="NewsData__date"style="width: 40vw;">{news.date}</p>
             <p class="NewsData__title"style="width: 40vw;">{news.text}</p> 
          </div>
